# SO101

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  collect_data.py  collect_image_and_joint.py  config..yml  config.yml  inspect_leader.py  requirements.txt  run_app.py  test_action_conditioning.py  test_gradient_isolation.py  test_world_model_smoke.py  train_model.py  train_world_model.py  world_model_inference.py
.github/: CODEOWNERS  pull_request_template.md
archieve/: test_reward_camera.py
archive/: RSSM_REFACTOR_SUMMARY.md  examples_dataloader_optimization.py  run_live.py  test_dataloader_optimization.py  test_gradient_isolation.py  test_reward_camera_nn.py
docs/: DATA_LOADING_OPTIMIZATION.md
model/: __init__.py  pyproject.toml
model/inference/: live_vae.py
model/src/: __init__.py
model/src/core/: run_context.py  train_vae.py  train_world_model.py
model/src/data/: __init__.py  augmentation.py  collect.py  collect_world_episode.py
model/src/data/app/: streamlit_collect_world_model.py
model/src/interfaces/: __init__.py  dataset.py  teleop.py  training.py
model/src/models/: action_encoder.py  contrastive_loss.py  rssm.py  vae.py  vae_simple.py  vae_strong.py  world_model.py
model/src/reward_camera/: README.md  augmentations.py  bead_model.py  dataset.py  inference.py  opencv_teacher.py  run_teleop_inference.py  streamlit_app.py  train.py
model/src/utils/: __init__.py  config.py  dataloader_utils.py  io.py  normalization.py  saving.py  teleop.py
model/visualization/: latent.py  plots.py
(+4 files in other folders)
